Fix crash on LinearAccelerationSensor.start()

Crash happened due to accidental access of a moved
object inside PlatformSensorFusion constructor.

Bug: 757712
Change-Id: I8b7c9106fbe69e80b3f04f690547cbc92a695946